; ModuleID = '/home/carl/AnghaBench/git/extr_stable-qsort.c_git_stable_qsort.c'
source_filename = "/home/carl/AnghaBench/git/extr_stable-qsort.c_git_stable_qsort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @git_stable_qsort(i8* %0, i64 %1, i64 %2, i32 (i8*, i8*)* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32 (i8*, i8*)*, align 8
  %9 = alloca i64, align 8
  %10 = alloca [1024 x i8], align 16
  %11 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 (i8*, i8*)* %3, i32 (i8*, i8*)** %8, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = call i64 @st_mult(i64 %12, i64 %13)
  store i64 %14, i64* %9, align 8
  %15 = load i64, i64* %9, align 8
  %16 = icmp ult i64 %15, 1024
  br i1 %16, label %17, label %24

17:                                               ; preds = %4
  %18 = load i8*, i8** %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = load i64, i64* %7, align 8
  %21 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %8, align 8
  %22 = getelementptr inbounds [1024 x i8], [1024 x i8]* %10, i64 0, i64 0
  %23 = call i32 @msort_with_tmp(i8* %18, i64 %19, i64 %20, i32 (i8*, i8*)* %21, i8* %22)
  br label %35

24:                                               ; preds = %4
  %25 = load i64, i64* %9, align 8
  %26 = call i8* @xmalloc(i64 %25)
  store i8* %26, i8** %11, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = load i64, i64* %6, align 8
  %29 = load i64, i64* %7, align 8
  %30 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %8, align 8
  %31 = load i8*, i8** %11, align 8
  %32 = call i32 @msort_with_tmp(i8* %27, i64 %28, i64 %29, i32 (i8*, i8*)* %30, i8* %31)
  %33 = load i8*, i8** %11, align 8
  %34 = call i32 @free(i8* %33)
  br label %35

35:                                               ; preds = %24, %17
  ret void
}

declare dso_local i64 @st_mult(i64, i64) #1

declare dso_local i32 @msort_with_tmp(i8*, i64, i64, i32 (i8*, i8*)*, i8*) #1

declare dso_local i8* @xmalloc(i64) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
